--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 title: Trade Audit
 author: Steven Skelton
 email: tradeauditapp@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: >
+  Social media #fintwit is full of "financial professionals" and "macro analysts". They curate twitter feeds to promote 
+  successful trading but hide losses by deleting tweets and posting misinformation. Do your due diligence and audit 
+  trading records before you invest your time and money. 
 # social links
 twitter_username: tradeaudit
 github_username:  stevenrskelton # DO NOT include the @ character, or else the build will fail!
