--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,8 @@ title: Trade Audit
 author: Steven Skelton
 email: tradeauditapp@gmail.com
 description: >
-  Social media fintwit is full of financial professionals and macro analysts. They curate twitter feeds to promote
-  successful trading but hide losses by deleting tweets and posting misinformation. Do your due diligence and audit
-  trading records before you invest your time and money. 
-# social links
+  Social media fintwit is full of financial professionals and macro analysts. Do your due diligence and audit
+  trading records before you invest your time and money.
 twitter_username: tradeaudit
 github_username:  stevenrskelton # DO NOT include the @ character, or else the build will fail!
 
