--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: Trade Audit App
+title: Trade Audit Mobile App
 author: Steven Skelton
 email: tradeauditapp@gmail.com
 #limit 150 chars for Google
