index integration links

--- a/_config.yml
+++ b/_config.yml
@@ -49,15 +49,20 @@ navigation:
       - label: "Influencer Rankings"
         url: "/rankings"
   - label: "Social Media Integrations"
+    key: "integrations"
     links:
-      - label: "<img src=\"/assets/integrations/youtube.svg\" alt=\"YouTube\">YouTube"
+      - label: "YouTube"
         url: "/youtube"
-      - label: "<img src=\"/assets/integrations/x.svg\" alt=\"X\">Twitter / X"
+        img: "/assets/integrations/youtube.svg"
+      - label: "Twitter / X"
         url: "/x"
-      - label: "<img src=\"/assets/integrations/substack.svg\" alt=\"Substack\">Substack"
+        img: "/assets/integrations/x.svg"
+      - label: "Substack"
         url: "/substack"
-      - label: "<img src=\"/assets/integrations/webpages.svg\" alt=\"Webpage\">Web Pages"
+        img: "/assets/integrations/substack.svg"
+      - label: "Web Pages"
         url: "/webpages"
+        img: "/assets/integrations/webpages.svg"
   - label: "Data Governance"
     links:
       - label: "Terms of Use"
