index integration links

--- a/_config.yml
+++ b/_config.yml
@@ -54,15 +54,19 @@ navigation:
       - label: "YouTube"
         url: "/youtube"
         img: "/assets/integrations/youtube.svg"
+        color: "#D7143A"
       - label: "Twitter / X"
         url: "/x"
         img: "/assets/integrations/x.svg"
+        color: "black"
       - label: "Substack"
         url: "/substack"
         img: "/assets/integrations/substack.svg"
+        color: "#FF681A"
       - label: "Web Pages"
         url: "/webpages"
         img: "/assets/integrations/webpages.svg"
+        color: "#27ae60"
   - label: "Our Data Governance"
     links:
       - label: "Terms of Use"
