--- a/_config.yml
+++ b/_config.yml
@@ -51,9 +51,9 @@ navigation:
   - label: "Import From Social Media"
     key: "integrations"
     links:
-      - label: "YouTube"
+      - label: ""
         url: "/youtube"
-        img: "/assets/integrations/youtube.svg"
+        img: "/assets/integrations/yt_logo_rgb_light.png"
         color: "#D7143A"
       - label: "Twitter"
         url: "/x"
@@ -61,9 +61,9 @@ navigation:
         color: "black"
       - label: "Substack"
         url: "/substack"
-        img: "/assets/integrations/substack.svg"
+        img: "/assets/integrations/substack_wordmark.png"
         color: "#FF681A"
-      - label: "Web Pages"
+      - label: "Web"
         url: "/webpages"
         img: "/assets/integrations/webpages.svg"
         color: "#27ae60"
