--- a/_config.yml
+++ b/_config.yml
@@ -53,11 +53,11 @@ navigation:
     links:
       - label: <img src="/assets/integrations/yt_logo_rgb_light.png" alt="YouTube" class="navitem_logo">
         url: "/youtube"
-      - label: <img src="/assets/integrations/x.svg" alt="Twitter" class="navitem_icon"><span style="color:#657786;vertical-align:middle;margin:0 10px;">/</span><img src="/assets/integrations/twitter-logo.svg" class="navitem_icon" alt="Twitter X logo" style="width:24px;position:relative;top:3px;max-height:24px;margin-top:-4px;">
-        url: "/x"
       - label: <img src="/assets/integrations/substack_wordmark.png" alt="Substack" class="navitem_logo">
         url: "/substack"
-      - label: <img src="/assets/integrations/webpages.svg" alt="Web" class="navitem_icon"><span class="navitem_text" style="color:#27ae60;">Web</span>
+      - label: <img src="/assets/integrations/x.svg" alt="Twitter" class="navitem_icon"><span style="color:#657786;vertical-align:middle;margin:0 10px;">/</span><img src="/assets/integrations/twitter-logo.svg" class="navitem_icon" alt="Twitter X logo" style="width:24px;position:relative;top:3px;max-height:24px;margin-top:-4px;">
+        url: "/x"
+      - label: <img src="/assets/integrations/webpages.svg" alt="Web" class="navitem_icon"><span class="navitem_text" style="color:#27ae60;padding-left:4px">Web Sites</span>
         url: "/webpages"
   - label: "Our Data Governance"
     links:
