--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ include:
   - _pages
 
 halfmoonCssTag: <link href="https://cdn.jsdelivr.net/npm/halfmoon@2.0.1/css/halfmoon.min.css" rel="stylesheet" integrity="sha256-SsJizWSIG9JT9Qxbiy8xnYJfjCAkhEQ0hihxRn7jt2M=" crossorigin="anonymous">
+litCoreJs: https://cdn.jsdelivr.net/gh/lit/dist@2/core/lit-core.min.js
 
 footer:
   links:
